--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
   <!-- header -->
   <header>
     <div class="width">
-      <h1><a href="#">Hannah Stein</a></h1>
+      <h1><a href="#">H</a></h1>
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
-          <a href="#" title="portfolio" class="active">portfolio</a>
+          <a href="#" title="portfolio" class="active">work</a>
           <a href="about.html" title="about">about</a>
-          <a href="#contact" title="contact">contact</a>
+          <a href="images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume">resume</a>
+          <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">contact</a>
         </nav>
     </div>
-    </header>
+  </header>
   <!-- content -->
   <section id="content" class="width">
     <h2 class="text-center">
@@ -114,67 +115,6 @@
       </article>
     </div>
   </section>
-  <!-- footer -->
-  <footer id="contact">
-    <div class="width">
-      <section>
-        <div class="social">
-          <h2>Let's talk.</h2>
-          <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-envelope fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>hannahsteindesigns@gmail.com</span>
-          </a>
-          <!-- <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>linkedin.com/in/hannahsteindesigns</span>
-          </a> -->
-          <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
-            <img src="images/behance.svg" width="24" />
-            <span>behance.net/hannahsteindesigns</span>
-          </a> -->
-          <a href="https://github.com/hannahsteindesigns/" title="see my original files on github">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-github fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>github.com/hannahsteindesigns</span>
-          </a>
-          <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-briefcase fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>issuu.com/hannahsteindesigns</span>
-          </a>
-        </div>
-        <div class="form">
-          <div id="form-messages"></div>
-          <form name="hscontact" id="form" method="post" action="contact.php" novalidate>
-            <div class="name-input">
-              <input required type="text" name="name" id="name">
-              <label for="name" placeholder="Name"></label>
-            </div>
-            <div class="email-input">
-              <input required type="email" name="email" id="email">
-              <label for="email" placeholder="Email"></label>
-            </div>
-            <div class="message-input">
-              <textarea required name="message" id="message"></textarea>
-              <label for="message" placeholder="Send me a message"></label>
-            </div>
-            <input type="text" id="website" name="website" style="display:none;">
-            <button type="submit" id="submit" class="full">Send</button>
-          </form>
-        </div>
-      </section>
-    </div>
-  </footer>
   <div id="scrollTop"><i class="fa fa-arrow-up" aria-label="back to top"></i></div>
   <script src="js/scripts.min.js"></script>
   <script>
