--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">  
-  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="css/styles.min.css?v=2" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -57,6 +57,6 @@
     <a href="about.html" title="about" class="active">about</a> -->
     <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">hannahsteindesigns@gmail.com</a>
   </footer>
-  <script src="js/scripts.min.js"></script>
+  <script src="js/scripts.min.js?v=2"></script>
 </body>
 </html>
