--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-  <link href="css/styles.min.css?v=2.2" rel="stylesheet">
+  <link href="css/styles.min.css?v=2.3" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -72,7 +72,7 @@
           <img class="lowres" alt="prescription file process" src="images/portfolio/low-res/stateserv.png" data-image="images/portfolio/stateserv.png" />
         </a>
         <div class="details">
-          <h3 class="green">prescription tracking process</h3>
+          <h3 class="color_primary">prescription tracking process</h3>
           <h6>StateServ Medical</h6>
           <p>When a patient receives medical oxygen, they are required to have a prescription on file. Before this project, that process was completed entirely outside of our web app through either email or paper files. There was no centralized location to view prescription data and no way to determine which patients were noncompliant.</p> 
           <p>I was able to build on existing functionality that our users were already familiar with in order to move this process into the app and create a process for DME providers to review prescriptions for validity.</p>
@@ -85,7 +85,7 @@
           <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/purchase-process.jpg" />
         </a>
         <div class="details">
-          <h3 class="green">purchase process redesign</h3>
+          <h3 class="color_primary">purchase process redesign</h3>
           <h6>TicketBiscuit</h6>
           <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project, I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
           <a class="button ignore" href="portfolio/ticketbiscuit.html" title="View Case Study">view case study</a>
@@ -97,7 +97,7 @@
           <img class="lowres" alt="counseling website design" src="images/portfolio/low-res/amy.png" data-image="images/portfolio/amy.png" />
         </a>
         <div class="details">
-          <h3 class="green">branding &amp; website</h3>
+          <h3 class="color_primary">branding &amp; website</h3>
           <h6>Amy Burke Counseling</h6>
           <p>Amy came to me with some ideas for a logo and a color that she liked. She had a pretty solid idea of what she wanted her brand to be and entrusted me with fleshing out the details and turning her ideas into reality.</p>
           <a class="button ignore" href="portfolio/amy.html" title="View Case Study">view case study</a>
@@ -109,7 +109,7 @@
           <img class="lowres" alt="therapy website design development" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/transcend.jpg">
         </a>
         <div class="details">
-          <h3 class="green">logo &amp; custom wordpress theme</h3>
+          <h3 class="color_primary">logo &amp; custom wordpress theme</h3>
           <h6>Transcend Individual and Family Counseling</h6>
           <p>When Robyn opened her practice in 2017 she needed to brand herself with a logo and create an online presence. She wanted something clean and simple while still allowing her personality to shine through.</p>
           <a class="button ignore" href="portfolio/transcend.html" title="View Case Study">view case study</a>
