--- a/portfolio/amy.html
+++ b/portfolio/amy.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-  <link href="../css/styles.min.css?v=2.2" rel="stylesheet">
+  <link href="../css/styles.min.css?v=2.3" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -51,7 +51,7 @@
   <section id="content" class="width case animate fade">
     <article class="overview">
       <h2>branding &amp; website designs</h2>
-      <h5 class="green">freelance designer for Amy Burke Counseling</h5>
+      <h5 class="color_primary">freelance designer for Amy Burke Counseling</h5>
       <div class="progressive img">
         <img class="lowres" src="../images/case-study/amy/mockup-small.png" height="600px" data-image="../images/case-study/amy/mockup-large.png"/>
       </div>
